load-balancer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: load-balancer
  name: load-balancer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: load-balancer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/second-infrastructure-dolibarr-network: "true"
        io.kompose.service: load-balancer
    spec:
      containers:
        - image: nginx
          name: lb
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: load-balancer-claim0
      restartPolicy: Always
      volumes:
        - name: load-balancer-claim0
          persistentVolumeClaim:
            claimName: load-balancer-claim0
status: {}
