dolibarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolibarr
spec:
  selector:
    io.kompose.service: dolibarr
  ports:
    - protocol: TCP
      port: 80        # Port exposé par le service
      targetPort: 80  # Port du pod auquel le trafic doit être redirigé
  type: ClusterIP    # Type de service, peut être NodePort, LoadBalancer, ou ClusterIP
