load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  labels:
    app: load-balancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
#      nodePort: 32140
#      protocol: TCP
  selector:
    app: load-balancer
